<resources>
    <string name="app_name">Projet-annuel-front-android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_user_rank">User\'s rank</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>